add multiple authors

--- a/app/components/citation-display/template.hbs
+++ b/app/components/citation-display/template.hbs
@@ -18,21 +18,21 @@
       <div id="csl-inner-block">
         <div class="csl-content-block" id="csl-form-block">
             <form class="add-citation-form" id="myform" type="post">
-              <div class="row">
-                <div id="authorRow">
-                  <div class="col-sm-4 form-group  elements">
-                    <p>{{input value=attrs.submitted.family class="form-control" placeholder="Family Name"}}</p>
+              <div class="row parentAuthorRow">
+                <div class="authorRow">
+                  <div class="col-sm-4 form-group elements family">
+                    {{input value=attrs.submitted.family class="form-control" placeholder="Family Name"}}
                   </div>
-                  <div class="col-sm-2 form-group  elements">
-                    <p>{{input value=middleInitial class="form-control" placeholder="M.I."}}</p>
+                  <div class="col-sm-2 form-group  elements ">
+                    {{input value=middleInitial class="form-control" placeholder="M.I."}}
                   </div>
-                  <div class="col-sm-4 form-group elements">
-                    <p>{{input value=attrs.submitted.given id='given-name' class="form-control" placeholder="Given Name"}}</p>
+                  <div class="col-sm-4 form-group elements given">
+                    {{input value=attrs.submitted.given id='given-name' class="form-control" placeholder="Given Name"}}
                   </div>
                 </div>
                 <button class="btn btn-default" {{action 'addAuthor'}}><i class="fa fa-plus"></i></button>
               </div>
-              <p id="tester"></p>
+              <div class="tester"></div>
               <div class="row">
                 <div class="col-sm-12 form-group elements">
                   {{input value=attrs.submitted.title class="form-control" placeholder="Title"}}
