--- a/app/components/citation-display/template.hbs
+++ b/app/components/citation-display/template.hbs
@@ -24,7 +24,7 @@
                     {{input value=attrs.submitted.given id='given-name' class="form-control" placeholder="Given Name"}}
                   </div>
                   <div class="col-sm-2 form-group  elements ">
-                    {{input value=middleInitial class="form-control" placeholder="M.I."}}
+                    {{input value=attrs.submitted.middleInitial class="form-control" placeholder="M.I."}}
                   </div>
                   <div class="col-sm-4 form-group elements family">
                     {{input value=attrs.submitted.family class="form-control" placeholder="Family Name"}}
