--- a/app/components/citation-display/template.hbs
+++ b/app/components/citation-display/template.hbs
@@ -304,14 +304,82 @@
                       {{input value=attrs.submitted.abstract class="form-control" placeholder="Abstract"}}
                     </div>
                   </div>
+                {{else if isDataset}}
+                  <div>Dataset</div>
+                  <div class="row">
+                    <div class="col-sm-6 form-group">
+                        {{input value=attrs.submitted.archive id='archive' class="form-control" placeholder="Data Repository"}}
+                    </div>
+                    <div class="col-sm-6 form-group">
+                        {{input value=attrs.submitted.archiveLocation id='archiveLocation' class="form-control" placeholder="Data Repository I.D."}}
+                    </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-sm-6 form-group">
+                          {{input value=attrs.submitted.callNumber id='callNumber' class="form-control" placeholder="Globally Unique I.D."}}
+                      </div>
+                      <div class="col-sm-6 form-group">
+                          {{input value=attrs.submitted.version class="form-control" placeholder="Version"}}
+                      </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-12 form-group elements">
+                      {{input value=attrs.submitted.medium class="form-control" placeholder="Resource Type"}}
+                    </div>
+                  </div>
+                {{else if isPresentation}}
+                  <div>Speech/Presentation</div>
+                  <div class="row">
+                    <div class="col-sm-6 form-group">
+                      {{input value=attrs.submitted.shortTitle class="form-control" placeholder="Short Title"}}
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6 form-group">
+                        {{input value=attrs.submitted.publisherPlace class="form-control" placeholder="Place"}}
+                    </div>
+                    <div class="col-sm-6 form-group">
+                        {{input value=attrs.submitted.event class="form-control" placeholder="Meeting Name"}}
+                    </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-sm-4 form-group">
+                          {{input value=attrs.submitted.genre class="form-control" placeholder="Genre"}}
+                      </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-12 form-group elements">
+                      {{input value=attrs.submitted.abstract class="form-control" placeholder="Abstract"}}
+                    </div>
+                  </div>
+                {{else if isWebpage}}
+                  <div>Webpage</div>
+                  <div class="row">
+                    <div class="col-sm-12 form-group">
+                      {{input value=attrs.submitted.shortTitle class="form-control" placeholder="Short Title"}}
+                    </div>
+                  </div>
+                  <div class="row">
+                      <div class="col-sm-4 form-group">
+                          {{input value=attrs.submitted.genre class="form-control" placeholder="Genre"}}
+                      </div>
+                      <div class="col-sm-4 form-group">
+                          {{input value=attrs.submitted.translator class="form-control" placeholder="translator"}}
+                      </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-12 form-group elements">
+                      {{input value=attrs.submitted.abstract class="form-control" placeholder="Abstract"}}
+                    </div>
+                  </div>
                 {{else}}
                   <div id="typeTrigger">*Please Select a Type</div>
                 {{/if}}
               {{/if}}
               <button id="advancedBtn" class="btn btn-block btn-primary " {{action "formExtend"}}{{action "changeClass"}}>Advanced <i id="advanced-icon" class="{{advancedIcon}}" ></i></button>
               <br>
-              <button class="btn btn-default submitBtn" {{action 'submit' }} {{ action 'updatesCitations'}}>Submit</button>
               <button class="btn btn-default cancelBtn" {{action "formClear"}}>Cancel</button>
+              <button class="btn btn-default submitBtn" {{action 'submit' }} {{ action 'updatesCitations'}}>Submit</button>
             </form>
           </div>
         </div>
